--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     margin: 0;
     font-family: 'Inter', sans-serif;
     background-color: var(--light-bg);
-    color: var(--text-color);
+    color: rgb(41, 40, 40);
     padding: 2rem;
   }
   
@@ -27,20 +27,19 @@
   }
   
   h1, h2, h3 {
-    margin-top: 1.2rem;
+    margin-top: 20px;
     font-weight: 700;
-    color: var(--text-color);
+    color: rgb(41, 40, 40);
   }
   
   h1 {
-    font-size: 2.5rem;
-    border: none;
-    margin-bottom: 0.5rem;
+    font-size: 40px;
+    margin-bottom: 20px;
   }
   
   h2 {
-    font-size: 1.8rem;
-    margin-top: 3rem;
+    font-size: 28px;
+    margin-top: 2.5rem;
   }
   
   ul, li {
@@ -113,7 +112,12 @@
   img {
     margin-top: 2rem;
   }
-  
-  #what {
-    line-height: 15px;
+
+  #mainline {
+    border: none;
+    height: 0.7px;
+    background-color: #e67e22;
+    margin: 2rem 0;
+    width: 100%;
   }
+   
