--- a/style.css
+++ b/style.css
@@ -88,11 +88,6 @@
     border-radius: 8px;
   }
   
-  hr {
-    margin: 3rem 0;
-    border-top: 1px solid var(--soft-border);
-  }
-  
   .toc-header {
     padding: 12px 20px;
     background-color: #ecf0f1;
@@ -110,6 +105,11 @@
   
   img {
     margin-top: 2rem;
+  }
+
+  hr {
+    margin: 3rem 0;
+    border-top: 1px solid rgb(204, 201, 201);
   }
 
   #mainline {
