--- a/style.css
+++ b/style.css
@@ -52,16 +52,17 @@
   }
   
   a {
-    text-decoration: none;
     color: #e67e22;
-    font-weight: 500;
-    transition: color 0.3s ease, text-decoration 0.3s ease; /* Smooth transition */
+    font-weight: bold;
+    padding: 8px 8px;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: transform 0.2s ease-in, box-shadow 0.2s ease-in;
   }
   
   a:hover {
-    background-color: #d35400; /* Slightly darker color on hover */
-    color: white;
-
+    transform: translateY(-3px);
+    box-shadow: 0 8px 10px rgba(0, 0, 0, 0.2);
   }
   
   code {
